--- a/scfaocontact.html
+++ b/scfaocontact.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<header class="mainheaderbox"><img src="../logo.png" width="298" height="71" alt=""/></header>
+<header class="mainheaderbox"><img src="logo.png" width="298" height="71" alt=""/></header>
 	<nav class="mainnavbox">
 						<div class="mainnavdiv"><u><a href="scfaoindex.html">Home</a></u>&nbsp; &nbsp;</div>
 						<div class="mainnavdiv"><a href="scfaosale.html"><u>Cakes for Sale</u></a>&nbsp; &nbsp;</div>
