--- a/scfaosale.html
+++ b/scfaosale.html
@@ -13,38 +13,38 @@
 </head>
 
 <body>
-	<header class="mainheaderbox"><img src="../logo.png" width="298" height="71" alt=""/></header>
+	<header class="mainheaderbox"><img src="logo.png" width="298" height="71" alt=""/></header>
 	<nav class="mainnavbox">
 						<div class="mainnavdiv"><u><a href="scfaoindex.html">Home</a></u>&nbsp; &nbsp;</div>
 						<div class="mainnavdiv"><mark style="background-color:#b5b5b5;"><a href="scfaosale.html"><u>Cakes for Sale</u></a></mark>&nbsp; &nbsp;</div>
-						
+						<div class="mainnavdiv"><a href="scfaotestimonials.html"><u>Testimonials</u></a>&nbsp;&nbsp;</div>
 						<div class="mainnavdiv">&nbsp;<a href="scfaocontact.html"><u>Contact Us</u></a></div></nav>
 	
 	
 	
 <h1 class="fontstyle"><em>Cakes For Sale</em></h1>
 <section class="mainsalesection1">
-	<a class="lightbox" href="#image4"><h3 style="text-align:center; font-family:arial; color:#0C243C;"">Brownie: <br>Contains Dairy, Nuts and Eggs</h3>
-   <img src="../brownie300.jpg"/></a>
+	<a class="lightbox" href="#image4"><h3 style="text-align:center; font-family:arial; color:#0C243C;">Brownie: <br>Contains Dairy, Nuts and Eggs</h3>
+   <img src="brownie300.jpg"/></a>
    
 <div class="lightbox-target" id="image4">
-   <img src="../brownie640.jpg"/>
+   <img src="brownie640.jpg"/>
    <a class="lightbox-close" href="#"></a>
 	</div>
 	
-	<a class="lightbox" href="#image5"><h3 style="text-align:center; font-family:arial; color:#0C243C;"">Chocolate Cake: <br>Contains Gluten, Dairy, Nuts and Eggs</h3>
-   <img src="../chocolateCake300.jpg"/>
+	<a class="lightbox" href="#image5"><h3 style="text-align:center; font-family:arial; color:#0C243C;">Chocolate Cake: <br>Contains Gluten, Dairy, Nuts and Eggs</h3>
+   <img src="chocolateCake300.jpg"/>
 </a> 
 <div class="lightbox-target" id="image5">
-   <img src="../chocolateCake640.jpg"/>
+   <img src="chocolateCake640.jpg"/>
    <a class="lightbox-close" href="#"></a>
 	</div>
 	
-	<a class="lightbox" href="#image6"><h3 style="text-align:center; font-family:arial; color:#0C243C;"">Cheese Cake: <br>Contains Gluten and Dairy</h3>
-   <img src="../cheeseCake300.jpg"/>
+	<a class="lightbox" href="#image6"><h3 style="text-align:center; font-family:arial; color:#0C243C;">Cheese Cake: <br>Contains Gluten and Dairy</h3>
+   <img src="cheeseCake300.jpg"/>
 </a> 
 <div class="lightbox-target" id="image6">
-   <img src="../cheeseCake640.jpg"/>
+   <img src="cheeseCake640.jpg"/>
    <a class="lightbox-close" href="#"></a>
 	</div>
 	
@@ -53,27 +53,27 @@
 <div class="linebreakdiv">&nbsp;<br></div>
 <br>
 <section class="mainsalesection2">
-	<a class="lightbox" href="#image1"><h3 style="text-align:center; font-family:arial; color:#0C243C;"">Cupcakes: <br>Contains Gluten, Dairy, Nuts and Eggs</h3>
-   <img src="../cupcake300.jpg"/>
+	<a class="lightbox" href="#image1"><h3 style="text-align:center; font-family:arial; color:#0C243C;">Cupcakes: <br>Contains Gluten, Dairy, Nuts and Eggs</h3>
+   <img src="cupcake300.jpg"/>
 </a> 
 <div class="lightbox-target" id="image1">
-   <img src="../cupcake640.jpg"/>
+   <img src="cupcake640.jpg"/>
    <a class="lightbox-close" href="#"></a>
 	</div>
 	
 	<a class="lightbox" href="#image2"><h3 style="text-align:center; font-family:arial; color:#0C243C;">Decorated Cake: <br>Can be made to match dietary requirements</h3>
-   <img src="../decoratedCake300.jpg"/>
+   <img src="decoratedCake300.jpg"/>
 </a> 
 <div class="lightbox-target" id="image2">
-   <img src="../decoratedCake640.jpg"/>
+   <img src="decoratedCake640.jpg"/>
    <a class="lightbox-close" href="#"></a>
 	</div>
 	
-	<a class="lightbox" href="#image3"><h3 style="text-align:center; font-family:arial; color:#0C243C;"">Macarons: <br>Contains Gluten, Dairy, Nuts and Eggs</h3>
-   <img src="../macaron300.jpg"/>
+	<a class="lightbox" href="#image3"><h3 style="text-align:center; font-family:arial; color:#0C243C;">Macarons: <br>Contains Gluten, Dairy, Nuts and Eggs</h3>
+   <img src="macaron300.jpg"/>
 </a> 
 <div class="lightbox-target" id="image3">
-   <img src="../macaron640.jpg"/>
+   <img src="macaron640.jpg"/>
    <a class="lightbox-close" href="#"></a>
 	</div>
 	
