--- a/scfaotestimonials.html
+++ b/scfaotestimonials.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<header class="mainheaderbox"><img src="../logo.png" width="298" height="71" alt=""/></header>
+<header class="mainheaderbox"><img src="logo.png" width="298" height="71" alt=""/></header>
 	<nav class="mainnavbox">
 						<div class="mainnavdiv"><u><a href="scfaoindex.html">Home</a></u>&nbsp; &nbsp;</div>
 						<div class="mainnavdiv"><a href="scfaosale.html"><u>Cakes for Sale</u></a>&nbsp;</div>
@@ -22,8 +22,8 @@
 <br>
 <h1 class="fontstyle">Special Cakes Testimonials</h1>
 <section class="mainaboutbox">
-<div style="float: left;"><img src="../orangeCake300.jpg" width="300" height="200" alt=""/></div>
-<div style="float: right;"><img src="../lemonCake300.jpg" width="300" height="200" alt=""></div>
+<div style="float: left;"><img src="orangeCake300.jpg" width="300" height="200" alt=""/></div>
+<div style="float: right;"><img src="lemonCake300.jpg" width="300" height="200" alt=""></div>
 <div>
 	<h3 class="fontstyle" style="font-size:24px;color:#0C243C;width:50%;padding-left:500px;">
 	Maariya: Cake was beautiful - everyone asked where I got it from!<br><br>
