--- a/scfaocontact.html
+++ b/scfaocontact.html
@@ -14,7 +14,7 @@
 <body>
 <header class="mainheaderbox"><img src="logo.png" width="298" height="71" alt=""/></header>
 	<nav class="mainnavbox">
-						<div class="mainnavdiv"><u><a href="scfaoindex.html">Home</a></u>&nbsp; &nbsp;</div>
+						<div class="mainnavdiv"><u><a href="index.html">Home</a></u>&nbsp; &nbsp;</div>
 						<div class="mainnavdiv"><a href="scfaosale.html"><u>Cakes for Sale</u></a>&nbsp; &nbsp;</div>
 						
 						<div class="mainnavdiv">&nbsp;<a href="scfaocontact.html"><mark style="background-color:#b5b5b5;"><u>Contact Us</u></mark></a></div></nav>
