--- a/scfaosale.html
+++ b/scfaosale.html
@@ -15,7 +15,7 @@
 <body>
 	<header class="mainheaderbox"><img src="logo.png" width="298" height="71" alt=""/></header>
 	<nav class="mainnavbox">
-						<div class="mainnavdiv"><u><a href="scfaoindex.html">Home</a></u>&nbsp; &nbsp;</div>
+						<div class="mainnavdiv"><u><a href="index.html">Home</a></u>&nbsp; &nbsp;</div>
 						<div class="mainnavdiv"><mark style="background-color:#b5b5b5;"><a href="scfaosale.html"><u>Cakes for Sale</u></a></mark>&nbsp; &nbsp;</div>
 						<div class="mainnavdiv"><a href="scfaotestimonials.html"><u>Testimonials</u></a>&nbsp;&nbsp;</div>
 						<div class="mainnavdiv">&nbsp;<a href="scfaocontact.html"><u>Contact Us</u></a></div></nav>
