--- a/scfaocontact.html
+++ b/scfaocontact.html
@@ -16,7 +16,7 @@
 	<nav class="mainnavbox">
 						<div class="mainnavdiv"><u><a href="index.html">Home</a></u>&nbsp; &nbsp;</div>
 						<div class="mainnavdiv"><a href="scfaosale.html"><u>Cakes for Sale</u></a>&nbsp; &nbsp;</div>
-						
+						<div class="mainnavdiv"><a href="scfaotestimonials.html"><u>Testimonials</u></a>&nbsp;&nbsp;</div>
 						<div class="mainnavdiv">&nbsp;<a href="scfaocontact.html"><mark style="background-color:#b5b5b5;"><u>Contact Us</u></mark></a></div></nav>
 	<h1 class="fontstyle">Get In Touch With Us</h1>
 <section class="maincontactsection">
