--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <header class="mainheaderbox"><img src="logo.png" width="298" height="71" alt=""/></header>
 	<nav class="mainnavbox">
-						<div class="mainnavdiv"><u><mark style="background-color:#b5b5b5;"><a href="scfaoindex.html">Home</a></mark></u>&nbsp; &nbsp;</div>
+						<div class="mainnavdiv"><u><mark style="background-color:#b5b5b5;"><a href="index.html">Home</a></mark></u>&nbsp; &nbsp;</div>
 						<div class="mainnavdiv"><a href="scfaosale.html"><u>Cakes for Sale</u></a>&nbsp; &nbsp; </div>
 						<div class="mainnavdiv"><a href="scfaotestimonials.html">&nbsp;<u>Testimonials</u></a>&nbsp;&nbsp;</div>	
 						<div class="mainnavdiv">&nbsp;<a href="scfaocontact.html"><u>Contact Us</u></a></div></nav>
